Implement Tree funcinality Merklee and Patricia Tree